--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ MONGODB_URL=mongodb://127.0.0.1:27017/mern-movie-2022
 PORT=5000
 TOKEN_SECRET=random
 TMDB_BASE_URL=https://api.themoviedb.org/3/
-TMDB_KEY=random
+TMDB_KEY=c39213246e58ff600faafa226ba66c8f
