--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "set DEBUG=express:* & nodemon index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
